--- a/felsenauto/Views/Iletisim/Index.cshtml
+++ b/felsenauto/Views/Iletisim/Index.cshtml
@@ -36,7 +36,7 @@
                         <i class="fas fa-map-marker-alt text-primary" style="font-size: 1.5rem; margin-top: 5px; margin-right: 20px; width: 30px;"></i>
                         <div>
                             <h4 style="margin-bottom: 5px;">Adresimiz</h4>
-                            <p style="color: #aaa;">Sanayi Mahallesi, 123. Sokak No:5<br>34000, İstanbul, Türkiye</p>
+                            <p style="color: #aaa;">Cumhuriyet mahallesi Turgut Özal caddesi No 5/A Akpınar Plaza<br>Şekerpınar Çayırova Kocaeli</p>
                         </div>
                     </div>
 
@@ -44,9 +44,7 @@
                         <i class="fas fa-phone text-primary" style="font-size: 1.5rem; margin-right: 20px; width: 30px;"></i>
                         <div>
                             <h4 style="margin-bottom: 5px;">Telefon</h4>
-                            <p style="color: #aaa;">0850 308 4641 (Merkez)</p>
-                            <p style="color: #aaa;">0 554 341 4368 (Yol Yardım/Destek)</p>
-                            <p style="color: #aaa;">0 531 749 09 12 (Mobil)</p>
+                            <p style="color: #aaa;">0850 308 4641</p>
                         </div>
                     </div>
 
@@ -57,16 +55,6 @@
                             <p style="color: #aaa;">info@felsen.com.tr</p>
                         </div>
                     </div>
-                </div>
-
-                <!-- Placeholder Map -->
-                <div class="card-glass" style="height: 300px; padding: 0; overflow: hidden; position: relative; background: #222;">
-                     <!-- Normally Google Maps iframe goes here -->
-                     <img src="https://via.placeholder.com/600x300/222/555?text=Google+Maps+Placeholder" alt="Harita" style="width: 100%; height: 100%; object-fit: cover; opacity: 0.5;">
-                     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center;">
-                         <i class="fas fa-map-marked-alt" style="font-size: 3rem; color: var(--primary);"></i>
-                         <p style="margin-top: 10px;">Harita Yükleniyor...</p>
-                     </div>
                 </div>
             </div>
 
