--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -648,6 +648,7 @@ ul {
   .brand-logo img {
     height: 100px;
     margin-top: 0;
+    margin-left: 10px;
   }
 
   .header-scrolled .brand-logo img {
